--- a/Rock Paper Scissor/index.html
+++ b/Rock Paper Scissor/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header><div class="title"><p>Rock Paper Sissors</p></div></header>
+    <header><div class="title"><p>Rock Paper Sissors Game</p></div></header>
     <main>
         <div class="symbols">
             <button class="rock"></button>
